force-app/main/default/objects/Metadata_Audit_Event__c/Metadata_Audit_Event__c.object-meta.xml
<CustomObject>
    <label>Metadata Audit Event</label>
    <pluralLabel>Metadata Audit Events</pluralLabel>
    <nameField>
        <label>Metadata Audit Event Name</label>
        <type>AutoNumber</type>
        <displayFormat>MAE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>