force-app/main/default/objects/Metadata_Audit_Event__c/fields/Action__c.field-meta.xml
<CustomField><fullName>Action__c</fullName><label>Action</label><length>255</length><type>Text</type></CustomField>