force-app/main/default/objects/Metadata_Audit_Event__c/fields/Audit_Run__c.field-meta.xml
<CustomField><fullName>Audit_Run__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Audit Run</label><referenceTo>Audit_Run__c</referenceTo><relationshipLabel>Metadata Audit Events</relationshipLabel><relationshipName>Metadata_Audit_Events</relationshipName><type>Lookup</type></CustomField>