force-app/main/default/objects/Metadata_Audit_Event__c/fields/Change_Category__c.field-meta.xml
<CustomField><fullName>Change_Category__c</fullName><label>Change Category</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Security</fullName><default>false</default><label>Security</label></value><value><fullName>Automation</fullName><default>false</default><label>Automation</label></value><value><fullName>Data Model</fullName><default>false</default><label>Data Model</label></value><value><fullName>Integration</fullName><default>false</default><label>Integration</label></value><value><fullName>UI</fullName><default>false</default><label>UI</label></value><value><fullName>Reporting</fullName><default>false</default><label>Reporting</label></value><value><fullName>Access Control</fullName><default>false</default><label>Access Control</label></value><value><fullName>Other</fullName><default>true</default><label>Other</label></value></valueSetDefinition></valueSet></CustomField>