force-app/main/default/objects/Metadata_Audit_Event__c/fields/Change_Request_Id__c.field-meta.xml
<CustomField><fullName>Change_Request_Id__c</fullName><label>Change Request Id</label><length>100</length><type>Text</type></CustomField>