force-app/main/default/objects/Metadata_Audit_Event__c/fields/Changed_By_Name__c.field-meta.xml
<CustomField><fullName>Changed_By_Name__c</fullName><label>Changed By Name</label><length>255</length><type>Text</type></CustomField>