force-app/main/default/objects/Metadata_Audit_Event__c/fields/Changed_By_UserId__c.field-meta.xml
<CustomField><fullName>Changed_By_UserId__c</fullName><label>Changed By User Id</label><length>100</length><type>Text</type></CustomField>