force-app/main/default/objects/Metadata_Audit_Event__c/fields/Component_Name__c.field-meta.xml
<CustomField><fullName>Component_Name__c</fullName><label>Component Name</label><length>255</length><type>Text</type></CustomField>