force-app/main/default/objects/Metadata_Audit_Event__c/fields/Deployment_Id__c.field-meta.xml
<CustomField><fullName>Deployment_Id__c</fullName><label>Deployment Id</label><length>100</length><type>Text</type></CustomField>