force-app/main/default/objects/Metadata_Audit_Event__c/fields/Display__c.field-meta.xml
<CustomField><fullName>Display__c</fullName><label>Display</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>