force-app/main/default/objects/Metadata_Audit_Event__c/fields/Environment__c.field-meta.xml
<CustomField><fullName>Environment__c</fullName><label>Environment</label><length>100</length><type>Text</type></CustomField>