force-app/main/default/objects/Metadata_Audit_Event__c/fields/Event_Key__c.field-meta.xml
<CustomField><fullName>Event_Key__c</fullName><externalId>true</externalId><label>Event Key</label><length>255</length><required>false</required><type>Text</type><unique>true</unique></CustomField>