force-app/main/default/objects/Metadata_Audit_Event__c/fields/Review_Status__c.field-meta.xml
<CustomField><fullName>Review_Status__c</fullName><label>Review Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>New</fullName><default>true</default><label>New</label></value><value><fullName>In Review</fullName><default>false</default><label>In Review</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value><value><fullName>False Positive</fullName><default>false</default><label>False Positive</label></value></valueSetDefinition></valueSet></CustomField>