force-app/main/default/objects/Metadata_Audit_Event__c/fields/Reviewed_At__c.field-meta.xml
<CustomField><fullName>Reviewed_At__c</fullName><label>Reviewed At</label><type>DateTime</type></CustomField>