force-app/main/default/objects/Metadata_Audit_Event__c/fields/Reviewed_By__c.field-meta.xml
<CustomField><fullName>Reviewed_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Reviewed By</label><referenceTo>User</referenceTo><relationshipLabel>Reviewed Metadata Audit Events</relationshipLabel><relationshipName>Reviewed_Metadata_Audit_Events</relationshipName><type>Lookup</type></CustomField>