force-app/main/default/objects/Metadata_Audit_Event__c/fields/Risk_Level__c.field-meta.xml
<CustomField><fullName>Risk_Level__c</fullName><label>Risk Level</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Low</fullName><default>true</default><label>Low</label></value><value><fullName>Medium</fullName><default>false</default><label>Medium</label></value><value><fullName>High</fullName><default>false</default><label>High</label></value><value><fullName>Critical</fullName><default>false</default><label>Critical</label></value></valueSetDefinition></valueSet></CustomField>