force-app/main/default/objects/Metadata_Audit_Event__c/fields/Risk_Reason__c.field-meta.xml
<CustomField><fullName>Risk_Reason__c</fullName><label>Risk Reason</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>