force-app/main/default/objects/Metadata_Audit_Event__c/fields/Section__c.field-meta.xml
<CustomField><fullName>Section__c</fullName><label>Section</label><length>255</length><type>Text</type></CustomField>