force-app/main/default/objects/Metadata_Audit_Event__c/fields/Source__c.field-meta.xml
<CustomField><fullName>Source__c</fullName><label>Source</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Setup Audit Trail</fullName><default>true</default><label>Setup Audit Trail</label></value><value><fullName>Metadata API</fullName><default>false</default><label>Metadata API</label></value><value><fullName>Tooling API</fullName><default>false</default><label>Tooling API</label></value><value><fullName>Manual</fullName><default>false</default><label>Manual</label></value><value><fullName>Deployment</fullName><default>false</default><label>Deployment</label></value></valueSetDefinition></valueSet></CustomField>